ui-server/k8s/deployment.yaml

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: incident-reporting
    release: v1
  name: incident-reporting-ui
spec:
  progressDeadlineSeconds: 60
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: incident-reporting-ui
      release: v1
  template:
    metadata:
      labels:
        app: incident-reporting-ui
        release: v1
    spec:
      containers:
      - image: docker.io/tompscanlan/incident-reporting-ui:1.5
        name: incident-reporting-ui
        # command:
        #   - sleep
        #   - "1000"
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 128M
        #   requests:
        #     cpu: 100m
        #     memory: 32M
        volumeMounts:
          - mountPath: /keyfile
            name: ethereum-keyfile-volume
      volumes:
        - name: ethereum-keyfile-volume
          configMap: 
            name: ethereum-keyfile
      restartPolicy: Always
