ui-server/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: incident-reporting-ui
    release: v1
  name: incident-reporting-ui-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: incident-reporting-ui
    release: v1
  sessionAffinity: None
  type: ClusterIP
